executing instances - scenario 1,2,3